syntax = "proto2";
import "hid.proto";
import "alarmclock.proto";

message UnionMessage{
	optional DeviceDescriptor device_descriptor = 1;
	optional HIDReport hid_report = 2;
	optional InputReport input_report = 3;
	optional SpeechSynthMsg speech_synth = 4;
	optional TimeMsg time = 5;
	optional AlarmMsg alarm = 6;
	optional NeoPixelMsg neopixel = 7;
}

message Packet{
	required bytes data = 1;
	required uint32 sequence_number = 2;
	required uint32 crc = 3;
	enum Flag {
		FIRST = 0;
		CONTINUE = 1;
		LAST = 2;
		FIRSTLAST = 3;
	}
	required Flag flag = 4;
}